# discogs_to_tidal

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: ci-setup.md  pre-commit.md
modules/: discogs_integration.py  tidal_integration.py  utils.py
spikes/: spike_discogs_to_tidal.py  spike_release_30019903.py  tidal_spike.py
src/discogs_to_tidal/: __init__.py
src/discogs_to_tidal/cli/: __init__.py  main.py  sync_command.py
src/discogs_to_tidal/core/: __init__.py  config.py  exceptions.py  models.py  sync.py
src/discogs_to_tidal/integrations/: __init__.py
src/discogs_to_tidal/integrations/discogs/: __init__.py  auth.py  client.py  client_new.py
src/discogs_to_tidal/integrations/tidal/: __init__.py  auth.py  client.py  search.py
src/discogs_to_tidal/utils/: __init__.py  music_utils.py  string_utils.py
tests/: README.md  conftest.py
tests/unit/: test_config.py  test_models.py  test_style_sync.py  test_sync.py
